<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="cbpos1989.com.helloworld.AddPersonActivity">

    <TextView
        android:text="@string/add_person_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_name"
        android:hint="@string/enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_phone"
        android:hint="@string/enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_email"
        android:hint="@string/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button_submit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSubmitClicked"/>
</LinearLayout>
