<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="cbpos1989.com.helloworld.PersonActivity">



    <TextView
        android:text="@string/person"
        android:textSize="24sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"/>

    <TextView
        android:id="@+id/person_name_field"
        android:text="@string/person_name"
        android:layout_width="wrap_content"
        android:paddingBottom="15dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/person_phone_field"
        android:text="@string/person_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/person_email_field"
        android:text="@string/person_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"/>

    <Button
        android:text="@string/button_remove_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRemoveClicked"/>

</LinearLayout>
